--- a/index.html
+++ b/index.html
@@ -11,15 +11,41 @@
 
         <!-- Navigation bar -->
         <ul class="navigation-outside">
-            <li>
-                <img alt="Stock image" src="https://static8.depositphotos.com/1001189/966/i/600/depositphotos_9669020-stock-photo-abstract-3d-sphere-business-logo.jpg">
-            </li>
-            <li><a href="#About_us">About us</a></li>
-            <li><a href="#Information">Information</a></li>
-            <li><a href="#Contacts">Contacts</a></li>
-            <li><a href="#License">License</a></li>
+            <div class="navbar-image">
+                <!-- <img alt="licensed company logo" src="https://static8.depositphotos.com/1001189/966/i/600/depositphotos_9669020-stock-photo-abstract-3d-sphere-business-logo.jpg"> -->
+            </div>
+            <div class="navbar-links">
+                <li><a href="#About_us">About us</a></li>
+                <li><a href="#Information">Information</a></li>
+                <li><a href="#Contacts">Contacts</a></li>
+                <li><a href="#License">License</a></li>                
+            </div>
         </ul>
-
-        
+        <div class="starter-paragraph">
+            <div class="split1">
+                <div class="greeting-image-section">
+                    <img alt="Green" src="https://previews.123rf.com/images/jpkirakun/jpkirakun1806/jpkirakun180600207/103664696-hintergrund-und-textur-der-nat%C3%BCrlichen-wand-der-gr%C3%BCnen-bl%C3%A4tter-.jpg">
+                </div>
+            </div>
+            <div class="split2">
+                <div class="starter-paragraph-text-sizing">
+                    <div class="starter-paragraph-text">
+                        Nam est metus, scelerisque auctor vehicula quis.
+                    </div>
+                    <div class="outterButtonBox">
+                        <div class="buttonBox">
+                            <div class="welcomeButton welcomeButton-element">
+                                <span>Option #1</span>
+                            </div>
+                        </div>
+                        <div class="buttonBox">
+                            <div class="welcomeButton welcomeButton-element">
+                                <span>Option #2</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
