--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
         <!-- Navigation bar -->
         <ul class="navigation-outside">
             <div class="navbar-image">
-                <!-- <img alt="licensed company logo" src="https://static8.depositphotos.com/1001189/966/i/600/depositphotos_9669020-stock-photo-abstract-3d-sphere-business-logo.jpg"> -->
             </div>
             <div class="navbar-links">
                 <li><a href="#About_us">About us</a></li>
@@ -21,10 +20,11 @@
                 <li><a href="#License">License</a></li>                
             </div>
         </ul>
+
         <div class="starter-paragraph">
             <div class="split1">
                 <div class="greeting-image-section">
-                    <img alt="Green" src="https://previews.123rf.com/images/jpkirakun/jpkirakun1806/jpkirakun180600207/103664696-hintergrund-und-textur-der-nat%C3%BCrlichen-wand-der-gr%C3%BCnen-bl%C3%A4tter-.jpg">
+                    <img alt="Green" src="https://graphicriver.img.customer.envatousercontent.com/files/292636582/Working-at-Home-Vector-Isometric-Collection-00-590.jpg?auto=compress%2Cformat&q=80&fit=crop&crop=top&max-h=8000&max-w=590&s=312bf3d675480a0fa44bc159ffbfd565">
                 </div>
             </div>
             <div class="split2">
@@ -47,5 +47,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- <div>
+            
+        </div> -->
     </body>
 </html>
