Custom option boxes

--- a/index.html
+++ b/index.html
@@ -48,8 +48,86 @@
             </div>
         </div>
 
-        <!-- <div>
+        <div class="headerText">
+            <b>Our services offer</b>
+        </div>
+
+            <div class="offer-inner">
+                <div class="offer-inner-box">
+                    <div class="offer-inner-box-inside">
+                        <img src="https://cdn-icons-png.flaticon.com/512/2592/2592258.png" alt="">
+                        <div class="offer-box-margin">
+                            Cras fringilla aliquam aliquam. Praesent porttitor, risus.
+                        </div>
+                    </div>
+                </div>
+                <div class="offer-inner-box">
+                    <div class="offer-inner-box-inside">
+                        <img src="https://cdn-icons.flaticon.com/png/512/3294/premium/3294774.png?token=exp=1649431308~hmac=01a3eec0a18796b4f3bd6a552aea57b6" alt=""><br>
+                        <div class="offer-box-margin">
+                            Nulla pellentesque erat vel nulla faucibus hendrerit.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="offer-inner-box">
+                    <div class="offer-inner-box-inside">
+                        <img src="https://cdn-icons.flaticon.com/png/512/3234/premium/3234972.png?token=exp=1649432616~hmac=5b540c24fdc6502ab925fc4b92c47039" alt="">
+                        <div class="offer-box-margin">
+                            Phasellus convallis felis sit amet sapien tempus.
+                        </div>
+                    </div>
+                </div>
+                <div class="offer-inner-box">
+                    <div class="offer-inner-box-inside">
+                        <img src="https://cdn-icons.flaticon.com/png/512/2316/premium/2316109.png?token=exp=1649432668~hmac=fed8ced7d92e2cf71ce523a61d9b594c" alt="">
+                        <div class="offer-box-margin">
+                            Sed tincidunt fringilla nunc, id viverra enim.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="offer-inner second-offer-box-spacing">
+                <div class="offer-inner-box">
+                    <div class="offer-inner-box-inside">
+                        <img src="https://cdn-icons-png.flaticon.com/512/2332/2332935.png" alt="Cog wheel">
+                        <div class="offer-box-margin">
+                            Duis sed finibus sem, quis sollicitudin velit.
+                        </div>
+                    </div>
+                </div>
+                <div class="offer-inner-box">
+                    <div class="offer-inner-box-inside">
+                        <img src="https://cdn-icons.flaticon.com/png/512/1698/premium/1698538.png?token=exp=1649437513~hmac=9ce30cd4e8b859a84e277c042a05ddec" alt=""><br>
+                        <div class="offer-box-margin">
+                            Donec pulvinar dolor sit amet eros feugiat.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="offer-inner-box">
+                    <div class="offer-inner-box-inside">
+                        <img src="https://cdn-icons-png.flaticon.com/512/1584/1584942.png" alt="">
+                        <div class="offer-box-margin">
+                            Nullam finibus eget odio et hendrerit. Pellentesque.
+                        </div>
+                    </div>
+                </div>
+                <div class="offer-inner-box">
+                    <div class="offer-inner-box-inside">
+                        <img src="https://cdn-icons-png.flaticon.com/512/6863/6863803.png" alt="">
+                        <div class="offer-box-margin">
+                            Praesent viverra quam ligula, nec ullamcorper nisi.
+                        </div>
+                    </div>
+                </div>
+            </div>
             
-        </div> -->
+            <div>
+                <button></button>
+            </div>
+            
+        </div>
     </body>
 </html>
