--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="offer-inner-box">
                     <div class="offer-inner-box-inside">
-                        <img src="https://cdn-icons.flaticon.com/png/512/3294/premium/3294774.png?token=exp=1649431308~hmac=01a3eec0a18796b4f3bd6a552aea57b6" alt=""><br>
+                        <img src="https://cdn-icons-png.flaticon.com/512/1055/1055687.png" alt=""><br>
                         <div class="offer-box-margin">
                             Nulla pellentesque erat vel nulla faucibus hendrerit.
                         </div>
@@ -72,7 +72,7 @@
 
                 <div class="offer-inner-box">
                     <div class="offer-inner-box-inside">
-                        <img src="https://cdn-icons.flaticon.com/png/512/3234/premium/3234972.png?token=exp=1649432616~hmac=5b540c24fdc6502ab925fc4b92c47039" alt="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/3176/3176366.png" alt="">
                         <div class="offer-box-margin">
                             Phasellus convallis felis sit amet sapien tempus.
                         </div>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="offer-inner-box">
                     <div class="offer-inner-box-inside">
-                        <img src="https://cdn-icons.flaticon.com/png/512/2316/premium/2316109.png?token=exp=1649432668~hmac=fed8ced7d92e2cf71ce523a61d9b594c" alt="">
+                        <img src="https://cdn-icons-png.flaticon.com/512/860/860239.png" alt="">
                         <div class="offer-box-margin">
                             Sed tincidunt fringilla nunc, id viverra enim.
                         </div>
