--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <div class="navbar-image">
             </div>
             <div class="navbar-links">
-                <li><a href="#Media">Media</a></li>
-                <li><a href="#Information">Information</a></li>
-                <li><a href="#Contacts">Contacts</a></li>
-                <li><a href="#License">License</a></li>                
+                <li><a href="#Services">Services</a></li>
+                <li><a href="#News">News</a></li>
+                <li><a href="#information">Information</a></li>
+                <li><a href="https://kostaskilda.github.io/digitalClock/" target="blank">Projects</a></li>                
             </div>
         </ul>
 
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div class="headerText">
+        <div class="headerText" id="Services">
             <b>Our services offer</b>
         </div>
 
@@ -124,7 +124,7 @@
             </div>
         </div>
         
-        <div class="headerText usefulLinks">
+        <div class="headerText usefulLinks" id="News">
             <b>Useful links</b>
         </div>
 
@@ -158,7 +158,7 @@
             </div>
         </div>
 
-        <div class="bottom">
+        <div class="bottom" id="information">
             <div class="bottom-header">
                 <b>More information</b>
             </div>
