Removed the scrolling transition

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
         </div>
 
-        <div class="headerText" id="Services">
+        <div class="headerText">
             <b>Our services offer</b>
         </div>
 
@@ -124,7 +124,7 @@
             </div>
         </div>
         
-        <div class="headerText usefulLinks" id="News">
+        <div class="headerText usefulLinks">
             <b>Useful links</b>
         </div>
 
@@ -158,7 +158,7 @@
             </div>
         </div>
 
-        <div class="bottom" id="information">
+        <div class="bottom">
             <div class="bottom-header">
                 <b>More information</b>
             </div>
