Updated image format

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="starter-paragraph">
             <div class="split1">
                 <div class="greeting-image-section">
-                    <img alt="Green greeting image" src="pictures/greetingImage.avif">
+                    <img alt="Green greeting image" src="pictures/greetingImage.png">
                 </div>
             </div>
             <div class="split2">
